<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BuzzTimer</string>
    <string name="add_interval">Add Interval</string>
    <string name="circular_sequence">Circular Sequence</string>
    <string name="circular_sequence_description">Repeat intervals in order</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="duplicate_interval">Duplicate interval</string>
    <string name="delete_interval">Delete interval</string>
    <string name="clear_all_intervals">Clear all intervals</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="menu_options">Menu options</string>
    <string name="clear_all_confirmation">Are you sure you want to delete all intervals? This action cannot be undone.</string>
    <string name="clear_all_title">Clear All Intervals</string>
    <string name="clear_all">Clear All</string>
    <string name="all_intervals_cleared">All intervals cleared</string>
    <string name="app_logo">App logo</string>
    <string name="version_format">Version %1$s</string>
    <string name="developers">Developers</string>
    <string name="developer_name">Suraj Iyer (@surajiyer)</string>

    <string name="set_interval_time">Set Interval Time</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="interval_format">%1$d min %2$d sec</string>
    <string name="no_intervals_added">No intervals added. Add at least one interval to start the timer.</string>
    <string name="timer_completed">Timer completed!</string>
    <string name="invalid_time">Please enter a valid time (seconds should be less than 60)</string>
    <string name="invalid_zero_time">Please enter a time greater than 0 minutes and 0 seconds</string>
    <string name="invalid_negative_time">Please enter positive time values</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="interval_name_hint">Interval Name (optional)</string>
    <string name="no_intervals_message">No intervals yet.\nTap the + to get started!</string>
    <string name="current_interval">Current Interval: %1$s</string>
    <string name="next_interval">Next: %1$s</string>
    <string name="remaining_time">Remaining time</string>
    <string name="edit_interval">Edit interval</string>
    <string name="interval_options">Interval options</string>

    <string name="notification_timer_running">Running: %1$s</string>
    <string name="request_notifications_permission">BuzzTimer needs notification permission to work properly in background</string>
    <string name="permission_required">Permission Required</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="timer_paused">Timer Paused</string>
    <string name="lap_counter">Lap: %1$d</string>
</resources>
